--- a/books.html
+++ b/books.html
@@ -33,20 +33,22 @@
       <input type="number" id="lengthInput" class="form-control">
 
       <br>
-      <label for="ratingInput">Rating:</label>
+      <label for="ratingInput">Rating:</label> ⭐⭐⭐⭐⭐
       <input type="text" id="ratingInput" class="form-control">
 
       <br>
-      <label for="StatusInput">Status:</label>
+      <label for="StatusInput">Status:</label> read, reading, to read, ntf
       <input type="text" id="StatusInput" class="form-control" required>
 
       <br>
-      <label for="languageInput">Language:</label>
+      <label for="languageInput">Language:</label> EN / NL
       <input type="text" id="languageInput" class="form-control" required>
 
       <br>
-      <label for="originInput">Origin:</label>
+      <label for="originInput">Origin:</label> ebook, library, owned, other
       <input type="text" id="originInput" class="form-control" required>
+	  	  
+
 
       <br>
       <label for="dateFinishedInput">Date Finished:</label>
