--- a/books.html
+++ b/books.html
@@ -76,11 +76,12 @@
       <br>
       <button type="button" id="saveButton" class="btn btn-primary mt-3">Save Changes</button>
     </form>
-<p></p>
+
+<button type="button" id="downloadButton" class="btn btn-success mt-3">Download JSON</button>
 
 
-    <h2>Updated JSON Data:</h2>
-    <div class="input-group mb-3">
+    <h2 class="mt-5">Updated JSON Data:</h2>
+    <div class="input-group mb-3 mt-3">
       <textarea id="jsonTextarea" class="form-control" rows="10"></textarea>
       <div class="input-group-append">
         <button type="button" id="copyButton" class="btn btn-secondary">COPY</button>
@@ -215,6 +216,26 @@
 
   // Add click event listener to the COPY button
   document.getElementById("copyButton").addEventListener("click", copyJSONToClipboard);
+
+
+  // Function to trigger JSON download for the entire dataset
+function downloadEntireJSON() {
+  const jsonContent = JSON.stringify(booksData, null, 2);
+
+  const blob = new Blob([jsonContent], { type: "application/json" });
+  const url = URL.createObjectURL(blob);
+
+  const a = document.createElement("a");
+  a.href = url;
+  a.download = "booksData.json";
+  a.click();
+
+  URL.revokeObjectURL(url);
+}
+
+// Add click event listener to the Download JSON button
+document.getElementById("downloadButton").addEventListener("click", downloadEntireJSON);
+
 </script>
 
 </body>
